front creer note bis bis

--- a/src/ihm/Connexion.form
+++ b/src/ihm/Connexion.form
@@ -130,6 +130,11 @@
                           </Group>
                           <EmptySpace pref="53" max="32767" attributes="0"/>
                       </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="lbMsgConnection" min="-2" pref="288" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -145,7 +150,8 @@
                               <Component id="txtMDP" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lbMDP" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                          <Component id="lbMsgConnection" min="-2" pref="16" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -170,6 +176,8 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="jPasswordField1"/>
                   </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="lbMsgConnection">
                 </Component>
               </SubComponents>
             </Container>
